Adopted new endpoints
